# extrablatt

./: .travis.yml  1.bootstrap.js  2.bootstrap.js  Cargo.toml  LICENSE-MIT  README.md  bootstrap.js  index.html
.github/workflows/: ci.yml
examples/: extrablatt.rs
extrablatt-web/: Cargo.toml  package-lock.json  package.json  webpack.config.js
extrablatt-web/js/: index.js
extrablatt-web/src/: lib.rs
extrablatt-web/static/: index.html
src/: article.rs  category.rs  clean.rs  date.rs  error.rs  extrablatt.rs  extract.rs  image.rs  language.rs  lib.rs  main.rs  newspaper.rs  stopwords.rs  storage.rs  text.rs  video.rs
tests/: integration_test.rs
