[package]
name = "extrablatt"
version = "0.1.0"
authors = ["Matthias Seitz <matthias.seitz@tum.de>"]
edition = "2018"
repository = "https://github.com/mattsse/extrablatt"
categories = ["parsing"]
keywords = ["parser", "web", "news"]
description = "News, articles and text scraper"
documentation = "https://docs.rs/extrablatt/"

[badges]
travis-ci = { repository = "mattsse/extrablatt", branch = "master" }

[[bin]]
name = "extrablatt"
path = "src/main.rs"
required-features = ["cli"]


[dependencies]
structopt = { version = "0.3", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
select = { git = "https://github.com/utkarshkukreti/select.rs" }
anyhow = "1.0"
log = "0.4"
thiserror = "1.0"
reqwest = "0.10"
archiveis = { version = "0.4", optional = true }
regex = "1.3"
rss = "1.9"
lazy_static = "1.4"
chrono = "0.4"
dtparse = "1.1"
wasm-timer = "0.2"
fnv = "1.0"
url = "2.1"
bytes = "0.5"
futures = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "0.2", features = ["macros"] }

[features]
default = ["stopwords"]
cli = ["structopt", "serde0", "serde_json"]
archive = ["archiveis"]
serde0 = ["serde", "url/serde", "chrono/serde"]
stopwords = []

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"