[package]
name = "extrablatt-web"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Matthias Seitz <matthias.seitz@tum.de>"]
repository = "https://github.com/mattsse/extrablatt"
description = "News, articles and text scraper in wasm"
categories = ["wasm"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
extrablatt = { version = "0.1", path = "../", features = ["serde0"] }


[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

[dev-dependencies]
wasm-bindgen-test = "0.3"
js-sys = "0.3"
wasm-bindgen-futures = "0.3"

[profile.release]
opt-level = "s"
