[package]
name = "extrablatt-web"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Matthias Seitz <matthias.seitz@tum.de>"]
repository = "https://github.com/mattsse/extrablatt"
description = "News, articles and text scraper in wasm"
categories = ["wasm"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
extrablatt = { version = "0.1", path = "../", features = ["serde0"] }
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
]